--- a/Messenger/MainWindow.xaml
+++ b/Messenger/MainWindow.xaml
@@ -24,18 +24,28 @@
             </Grid.RowDefinitions>
             <Rectangle StrokeThickness ="1" Grid.Row="1" Grid.Column="1" Fill="#FF1C163C" RadiusX="50" RadiusY="50" />
             <TextBlock Text="Чат Болтанка приветствует вас!" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontSize="22" Margin="0,0,0,0"/>
+            <Image Grid.Column="1" HorizontalAlignment="Left" Height="332" Margin="353,10,0,0" Grid.Row="1" VerticalAlignment="Top" Width="326" Source="/login.png"/>
+            <Grid Grid.Row="1" Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="1">
+                    <TextBlock Text="Идентифицируйте себя!" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="White" FontSize="22" Margin="20,20,0,0"/>
+                    <TextBlock Text="Ваш логин" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="White" FontSize="22" Margin="0,20,0,0"/>
 
-            <StackPanel Orientation="Vertical" Grid.Column="1" Grid.Row="1">
-                <TextBlock Text="Идентифицируйте себя!" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="White" FontSize="22" Margin="20,20,0,0"/>
-                <TextBlock Text="Ваш логин" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="White" FontSize="22" Margin="0,20,0,0"/>
-                <TextBox Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center"  FontSize="22" Margin="0,5,0,0" Text="Логин" TextWrapping="NoWrap" Width="309"/>
-                <TextBlock Text="Пароль" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="White" FontSize="22" Margin="0,20,0,0"/>
-                <PasswordBox Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" FontSize="22" Margin="0,5,0,0" Password="" Width="309"/>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <Button Content="Войти" Margin="10,10,10,10" FontSize="22" />
-                    <Button Content="Регистрация" Margin="10,10,10,10" FontSize="22"/>
+                    <TextBox Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center"  FontSize="22" Margin="0,5,0,0" Text="Логин" TextWrapping="NoWrap" Width="309"/>
+
+                    <TextBlock Text="Пароль" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Top" Foreground="White" FontSize="22" Margin="0,20,0,0"/>
+                    <PasswordBox Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" FontSize="22" Margin="0,5,0,0" Password="" Width="309"/>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                        <Button Content="Войти" Margin="10,10,10,10" FontSize="22" Width="140" Background="Azure" />
+                        <Button Content="Регистрация" Margin="10,10,10,10" FontSize="22" Width="140"/>
+                    </StackPanel>
                 </StackPanel>
-            </StackPanel>
+            </Grid>
+            
+           
         </Grid>
     </Border>
 
